# restapi/src/main/java/com/provys/catalogue/restapi/DomainEndpoint.java
@@ -2,13 +2,11 @@ package com.provys.catalogue.restapi;
 
 import com.provys.catalogue.api.CatalogueRepository;
 import com.provys.catalogue.api.Domain;
-import com.provys.catalogue.api.Entity;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 
-import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
@@ -17,10 +15,10 @@ import javax.ws.rs.Produces;
 import javax.ws.rs.core.Response;
 import java.math.BigInteger;
 
-@ApplicationScoped
 @Path("/domain")
 public class DomainEndpoint {
 
+    @SuppressWarnings("CdiUnproxyableBeanTypesInspection")
     @Inject
     CatalogueRepository catalogueRepository;
 
@@ -60,5 +58,24 @@ public class DomainEndpoint {
                                     )))})
     public Response getDomainById(@PathParam("domainId") BigInteger id) {
         return Response.ok(catalogueRepository.getDomainManager().getById(id)).build();
+    }
+
+    @GET
+    @Path("/")
+    @Produces("text/plain")
+    @Operation(
+            summary = "Get All Domains",
+            description = "Retrieve all domains",
+            responses = {
+                    @ApiResponse(
+                            description = "Domain",
+                            content = @Content(
+                                    mediaType = "text/plain",
+                                    schema = @Schema(
+                                            implementation = Domain.class,
+                                            maxLength = 30
+                                    )))})
+    public Response getAllDomains() {
+        return Response.ok(catalogueRepository.getDomainManager().getAll()).build();
     }
 }
